[gd_scene load_steps=3 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 33 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="AlertTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AlertScanTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -20.0
margin_top = -32.0
margin_right = 20.0
margin_bottom = 34.0
color = Color( 0.411765, 0.0313726, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 9
collide_with_areas = true

[node name="Label" type="Label" parent="."]
margin_left = -20.0
margin_top = -60.0
margin_right = 20.0
margin_bottom = -46.0
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = -20.0
margin_top = -77.0
margin_right = 20.0
margin_bottom = -63.0
align = 1

[connection signal="timeout" from="AlertTimer" to="." method="_on_AlertTimer_timeout"]
[connection signal="timeout" from="AlertScanTimer" to="." method="_on_AlertScanTimer_timeout"]
